# openid_surgery

./: .env  Dockerfile  README.md  docker-compose.yaml  example.env  pyproject.toml
auth/: __main__.py  client.py  settings.py
client/: __main__.py  client.py  settings.py  simple.py
server/: __main__.py  app.py  handler.py  router.py  settings.py  util.py
