[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.2"
pydantic-settings = "^2.5.0"
oic = "^1.7.0"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
yarl = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
